# news-flashes

./: .env.example  .gitignore  CLAUDE.md  README.md  news_flashes.db  plan_flashes.md  pyproject.toml  seed_candidate.py
src/news_flashes/: __init__.py  config.py
src/news_flashes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/news_flashes/delivery/: __init__.py  charts.py  clients.py  render.py  sender.py
src/news_flashes/delivery/templates/: __init__.py  email.html.j2
src/news_flashes/generation/: __init__.py  generator.py  prompt.py
src/news_flashes/generation/templates/: __init__.py  disclaimer.txt  example_flash_fr.md
src/news_flashes/ingestion/: __init__.py  calendar.py  market_data.py  news.py
src/news_flashes/models/: __init__.py  db.py  schema.py
src/news_flashes/review/: __init__.py  app.py  logic.py
src/news_flashes/scheduler/: __init__.py  worker.py
src/news_flashes/triggers/: __init__.py  rules.py
tests/: test_calendar.py  test_db.py  test_delivery.py  test_e2e.py  test_generator.py  test_market_data.py  test_news.py  test_render.py  test_review_logic.py  test_rules.py  test_schema.py  test_worker.py
