[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-flashes"
version = "0.1.0"
description = "Semi-automated FX-hedging advisory flash pipeline"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel",
    "pydantic-settings",
    "anthropic",
    "streamlit",
    "jinja2",
    "matplotlib",
    "httpx",
    "markdown",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
