[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-flashes"
version = "0.1.0"
description = "FX advisory news flash system — draft, review, send"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "jinja2>=3.1",
    "anthropic>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
]
charts = [
    "matplotlib>=3.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
